So scared of this commit, basically light mode dark mode bugs fixed (really? hope se)

--- a/src/Home.css
+++ b/src/Home.css
@@ -25,6 +25,7 @@
   justify-content: space-between;
   align-items: center;
   pointer-events: auto;
+  padding-top: 0.5rem;
 }
 .bar :last-child {
   margin-right: 0;
