--- a/src/styles.css
+++ b/src/styles.css
@@ -91,6 +91,11 @@ body,
   color: #fdfdfb !important;
   transition: ease-out 1s;
 }
+.dark {
+  background-color: black !important;
+  color: white !important;
+  /* transition: ease 1s; */
+}
 /* Hide the default scrollbar */
 ::-webkit-scrollbar {
   width: 10px;
